# ros_plate_detection

./: CMakeLists.txt  hough.py  package.xml
hough/: hough_detection.py
ros/launch/: plate_detector.launch
ros/scripts/: module.py  plate_detection.py  plate_detection_class.py  ros_plate_detection_node  ros_plate_detection_node~  ros_python_simple_node  ros_python_simple_node~
