<?xml version="1.0"?>
<package>
  <name>ros_plate_detection_node</name>
  <version>0.1.0</version>
  <description>The ros_plate_detection node</description>

  <maintainer email="vladimir.krasin@gmail.com">Vlad</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
</package>
